--- a/Channer/Storyboard/Main.storyboard
+++ b/Channer/Storyboard/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Jtg-cD-2VY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
@@ -7,96 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
-        <scene sceneID="TdP-CX-5J7">
-            <objects>
-                <navigationController id="Jtg-cD-2VY" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dBv-oi-dJM">
-                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="lue-Ge-RKO" kind="relationship" relationship="rootViewController" id="m0R-AZ-xCo"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="AKN-eI-LIl" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-254" y="-230"/>
-        </scene>
-        <!--Channer-->
-        <scene sceneID="2x1-BB-42n">
-            <objects>
-                <collectionViewController title="Channer" id="lue-Ge-RKO" customClass="boardsCV" customModule="Channer" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" id="PoE-eI-bY7">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vBb-me-ubf">
-                            <size key="itemSize" width="100" height="100"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="15" minY="29" maxX="15" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="boardCell" id="aDj-Dq-rAw" customClass="boardCVCell" customModule="Channer" customModuleProvider="target">
-                                <rect key="frame" x="15" y="29" width="100" height="100"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="boardSquare" translatesAutoresizingMaskIntoConstraints="NO" id="mV2-U7-29D">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="boardName" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fyN-Ha-B8x">
-                                            <rect key="frame" x="9" y="23" width="82" height="54"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bnAbv" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pgU-mH-Kja">
-                                            <rect key="frame" x="11" y="73" width="78" height="17"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </view>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="mV2-U7-29D" secondAttribute="bottom" id="2M2-HR-ALp"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="pgU-mH-Kja" secondAttribute="bottom" constant="2" id="2M6-Iw-G1F"/>
-                                    <constraint firstItem="mV2-U7-29D" firstAttribute="leading" secondItem="aDj-Dq-rAw" secondAttribute="leading" id="2Xg-kE-10r"/>
-                                    <constraint firstItem="fyN-Ha-B8x" firstAttribute="leading" secondItem="aDj-Dq-rAw" secondAttribute="leadingMargin" constant="1" id="8ba-IK-Eo3"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="pgU-mH-Kja" secondAttribute="trailing" constant="3" id="EQd-Rm-LKQ"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="fyN-Ha-B8x" secondAttribute="bottom" constant="15" id="Gz3-6y-Z07"/>
-                                    <constraint firstItem="pgU-mH-Kja" firstAttribute="leading" secondItem="aDj-Dq-rAw" secondAttribute="leadingMargin" constant="3" id="Q4F-ej-sRL"/>
-                                    <constraint firstAttribute="trailing" secondItem="mV2-U7-29D" secondAttribute="trailing" id="WPG-Nv-p7e"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="fyN-Ha-B8x" secondAttribute="trailing" constant="1" id="elD-od-Ydu"/>
-                                    <constraint firstItem="mV2-U7-29D" firstAttribute="top" secondItem="aDj-Dq-rAw" secondAttribute="top" id="gHK-bo-6BL"/>
-                                    <constraint firstItem="fyN-Ha-B8x" firstAttribute="top" secondItem="aDj-Dq-rAw" secondAttribute="topMargin" constant="15" id="mVS-VP-rGO"/>
-                                    <constraint firstItem="pgU-mH-Kja" firstAttribute="top" secondItem="aDj-Dq-rAw" secondAttribute="topMargin" constant="65" id="neM-xr-RKB"/>
-                                </constraints>
-                                <connections>
-                                    <outlet property="boardName" destination="fyN-Ha-B8x" id="hjS-wx-xPk"/>
-                                    <outlet property="boardNameAbv" destination="pgU-mH-Kja" id="q76-FN-lsL"/>
-                                </connections>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="lue-Ge-RKO" id="QA9-ya-hoQ"/>
-                            <outlet property="delegate" destination="lue-Ge-RKO" id="gcc-A7-zcG"/>
-                        </connections>
-                    </collectionView>
-                    <navigationItem key="navigationItem" title="Home" id="aQe-ix-tAs"/>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ca1-cr-tKe" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="569.56521739130437" y="-230.35714285714283"/>
-        </scene>
-        <!--/boardNameAbv/-->
+        <!--BoardTV-->
         <scene sceneID="Bjp-kd-ulI">
             <objects>
-                <tableViewController storyboardIdentifier="boardTV" title="/boardNameAbv/" id="Mjz-0b-djm" customClass="boardTV" customModule="Channer" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="boardTV" id="Mjz-0b-djm" customClass="boardTV" customModule="Channer" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="172" estimatedRowHeight="172" sectionHeaderHeight="28" sectionFooterHeight="28" id="DMt-mv-mtZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -110,7 +24,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="172"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="topicCell" translatesAutoresizingMaskIntoConstraints="NO" id="oxc-T1-tXX">
+                                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="topicCell" translatesAutoresizingMaskIntoConstraints="NO" id="oxc-T1-tXX">
                                             <rect key="frame" x="7" y="1" width="400" height="170"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
@@ -151,7 +65,6 @@
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
-                                    <outlet property="topicCell" destination="oxc-T1-tXX" id="Ch1-yF-Cbm"/>
                                     <outlet property="topicImage" destination="ze1-n7-KCF" id="g4c-ni-bIM"/>
                                     <outlet property="topicStats" destination="2qX-Y8-9bb" id="VNh-t0-veU"/>
                                     <outlet property="topicTextNoTitle" destination="i2n-Ed-ESs" id="KLi-Uj-0iq"/>
@@ -168,7 +81,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XdO-xu-1fY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1356.521739130435" y="-231.02678571428569"/>
+            <point key="canvasLocation" x="-4597" y="-19"/>
         </scene>
         <!--Collection View Controller-->
         <scene sceneID="mPS-PO-5Du">
@@ -226,7 +139,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gef-un-9ZI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2112" y="-230"/>
+            <point key="canvasLocation" x="-3071" y="-19"/>
         </scene>
         <!--Thread RepliesTV-->
         <scene sceneID="dNd-sa-MSR">
@@ -309,11 +222,10 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="faK-G4-Nef" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1356.521739130435" y="463.39285714285711"/>
+            <point key="canvasLocation" x="-3794" y="-19"/>
         </scene>
     </scenes>
     <resources>
-        <image name="boardSquare" width="46" height="46"/>
         <image name="catalogCell" width="44" height="79"/>
         <image name="loadingBoardImage" width="42.5" height="42.5"/>
         <image name="thread" width="33" height="33"/>
